# GnublinBootSplash

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
data/: Gnublin_BootSplash_progress.xcf  Makefile.am  Makefile.in  gnublinbootsplash.cfg
src/: Makefile.am  Makefile.in  bootsplash.c  comm.h  configuration.c  configuration.h  daemon.c  daemon.h  framebuffer.c  framebuffer.h  io-fifo.c  io-sdbus.c  log.c  log.h
