
DATADIR = @datarootdir@
SYSCONFDIR = @sysconfdir@
CONFIGDIR = @configdir@
PACKAGE = @PACKAGE@
VERSION = @VERSION@


bootsplashdir = $(DATADIR)/bootsplash

bootsplashconfdir=$(sysconfdir)

bootsplash_DATA = \
	arial.ttf \
	Gnublin_BootSplash_frame.png \
	Gnublin_BootSplash_progress.png \
	Gnublin_BootSplash_progress.xcf

bootsplashconf_DATA= gnublinbootsplash.cfg



EXTRA_DIST = $(bootsplash_DATA)
EXTRA_DIST += $(bootsplashconf_DATA)
